# tweed

./: .gitignore  books.py  library.txt  missing.txt  pyproject.toml
data/: arrangement.json  books-as-placed.json  cookbooks.txt  crime.txt  first-nations.txt  fixup.fish  isbn_overrides.json  librarything_grahame.json  liturgy.txt  poetry-and-epic-myth.txt  romance.txt  sort_keys.json  speculative-fiction.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json  moves.txt
frontend/src/: App.css  App.tsx  books.json  index.tsx
tweed/: cli.py  library.py
