[tool.poetry]
name = "tweed"
version = "0.1.0"
description = "Grahame Bowland's library"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
lxml = "^4.6.1"
isbnlib = "^3.10.14"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
tweed = 'tweed.cli:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

